<resources>
    <string name="app_name">FunnyAutoReply</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="incomingCallPrefs">incoming_call_br_prefs</string>
    <string name="previousStateKey">previous_state</string>
    <string name="action_settings">settings</string>
    <string name="joke_header">Jokes</string>
    <string name="category_title">Joke Categories</string>
    <string name="any_category_title">Specific Categories</string>
    <string name="any_category_summary_off">The joke is chosen from a random category.</string>
    <string name="any_category_summary_on">The jokes are chosen from a list of specific categories.</string>
    <string name="on_off_title">Turn ON/OFF</string>
    <string name="reply_on_off_key">reply_on_off</string>
    <string name="reply_key">reply_category</string>
    <string name="any_category_key">any_category</string>
    <string name="categories_key">categories</string>
    <string name="action_refresh">Refresh</string>
    <string name="sentJoke">Sent Joke</string>
    <string name="ok">OK</string>
    <string name="phone_number_label">Phone number:</string>
    <string name="date_label">Date:</string>
    <string name="category_label">Category:</string>
    <string name="read_phone_state_rationale">Needed for incoming call detection</string>
    <string name="read_call_log_rationale">Needed for sms sending</string>
    <string name="send_sms_rationale">Needed for sms sending</string>
    <string name="read_contacts_rationale">Needed to check if the incoming phone number is in contacts</string>
</resources>